--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,9 @@ dependencies:
   provider: ^6.0.2
   flutter_facebook_auth: ^4.2.1
   splash_screen_view: ^3.0.0
-
-
+  image_picker: ^0.8.5
+  firebase_storage: ^10.2.15
+  path_provider: ^2.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
