--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.11
+  cloud_functions: ^3.2.15
+  flutter_chat_bubble: ^2.0.0
+
+  cupertino_list_tile: ^0.2.1
 
 dev_dependencies:
   flutter_test:
