--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,13 @@ dependencies:
   cloud_firestore: ^3.1.11
   cloud_functions: ^3.2.15
   flutter_chat_bubble: ^2.0.0
-
+  tflite_flutter: ^0.9.0
   cupertino_list_tile: ^0.2.1
+  google_maps_flutter: ^2.1.5
+  location: ^4.4.0
+  geolocator: ^8.2.1
+  logger: ^1.1.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -103,6 +108,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
